SBOM 1374 - Add Support for SPDX 2.2 in IQ (#13739)